--- a/collect_plante.html
+++ b/collect_plante.html
@@ -8,7 +8,7 @@
     <nav>
         <h1>Karnivore</h1>
         <div class="onglets">
-            <a href="html vitrines.html">Présentation</a>
+            <a href="index.html">Présentation</a>
             <a href="diff_plantes.html">Les différentes espèces</a> <!-Mise en place d'onglets de navigations ->
             <a href="collect_plante.html">Collection personnelle</a>
         </div>
